# CompleteBasket

./: .gitignore  1_Explore_Instacart_data.ipynb  2_Market_Basket_Association_Analysis.ipynb  3_Training_Constructing_item_by_item_matrix.ipynb  4_Recommending_Items.ipynb  5_upload_products.ipynb  README.md  model.py  procfile  pyproject.toml  requirements.txt
UI/: streamlit_app.py
api/: api.py
db/: models.py  sqlmodels.py
src/: __init__.py  basketapp.py  helper.py
src/static/: styles.css
src/templates/: index.html  items.html  products.html
