[tool.poetry]
name = "railway-fastapi-template"
version = "0.1.0"
description = "TFastAPI server"
authors = ["YM"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"